--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,18 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern = %d{HH:mm:ss} %-5.5p [%-10.10t] %-25.25c{1} - %m%n
 log4j.appender.console.Threshold = INFO
 
-log4j.logger.senselogic.excelbundle=DEBUG
+# --- file appender ---
+log4j.appender.logfile=org.apache.log4j.RollingFileAppender
+log4j.appender.logfile.File=excelbundle.log
+log4j.appender.logfile.MaxFileSize=2000KB
+log4j.appender.logfile.MaxBackupIndex=10
+# Pattern to output: date priority [category] - message
+log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}] %m%n
+
+
+log4j.logger.senselogic.excelbundle=INFO
